--- a/src/webapi-angular/ClientApp/app/components/home/home.component.html
+++ b/src/webapi-angular/ClientApp/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<h1>Hello, world!</h1>
+<!--<h1>Hello, world!</h1>
 <p>Welcome to your new single-page application, built with:</p>
 <ul>
     <li><a href='https://get.asp.net/'>ASP.NET Core</a> and <a href='https://msdn.microsoft.com/en-us/library/67ef8sbd.aspx'>C#</a> for cross-platform server-side code</li>
@@ -13,4 +13,178 @@
     <li><strong>Webpack dev middleware</strong>. In development mode, there's no need to run the <code>webpack</code> build tool. Your client-side resources are dynamically built on demand. Updates are available as soon as you modify any file.</li>
     <li><strong>Hot module replacement</strong>. In development mode, you don't even need to reload the page after making most changes. Within seconds of saving changes to files, your Angular 2 app will be rebuilt and a new instance injected is into the page.</li>
     <li><strong>Efficient production builds</strong>. In production mode, development-time features are disabled, and the <code>webpack</code> build tool produces minified static CSS and JavaScript files.</li>
-</ul>
+</ul>-->
+
+<div [@flyInOut]="'in'">
+ 
+    <div class="container content">
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            </ol>
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <div class="thumbnail adjust1">
+                                <div [mobileHide]="'972'" class="col-md-2 col-sm-2 col-xs-12">
+                                    <span class="fa-stack fa-4x">
+                                      <i class="fa fa-square fa-stack-2x text-primary"></i>
+                                      <i class="fa fa-html5 fa-stack-1x fa-inverse" style="color:#FFC107"></i>
+                                      <img src="http://localhost:5000/images/angular.png" style="width:180px; height:180px;"/>
+                                    </span>
+                                </div>
+                                <div class="col-md-10 col-sm-10 col-xs-12">
+                                    <div class="caption">
+                                        <p class="text-info lead adjust2">ASP.NET Core</p>
+                                        <p><span class="glyphicon glyphicon-thumbs-up"></span> ASP.NET Core is a new open-source
+                                            and cross-platform framework for building modern cloud based internet connected
+                                            applications, such as web apps, IoT apps and mobile backends.</p>
+                                        <blockquote class="adjust2">
+                                            <p>Microsoft Corp.</p> <small><cite title="Source Title"><i class="glyphicon glyphicon-globe"></i> https://docs.asp.net/en/latest/</cite></small>                                            </blockquote>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <div class="thumbnail adjust1">
+                                <div mobileHide="772" class="col-md-2 col-sm-2 col-xs-12">
+                                    <span class="fa-stack fa-4x">
+                                        <i class="fa fa-square fa-stack-2x text-primary"></i>
+                                        <i class="fa fa-code fa-stack-1x fa-inverse" style="color:#FFC107"></i>
+                                    </span>
+                                </div>
+                                <div class="col-md-10 col-sm-10 col-xs-12">
+                                    <div class="caption">
+                                        <p class="text-info lead adjust2">Angular 2</p>
+                                        <p><span class="glyphicon glyphicon-thumbs-up"></span> Learn one way to build applications
+                                            with Angular and reuse your code and abilities to build apps for any deployment
+                                            target. For web, mobile web, native mobile and native desktop.</p>
+                                        <blockquote class="adjust2">
+                                            <p>Google</p> <small><cite title="Source Title"><i class="glyphicon glyphicon-globe"></i>https://angular.io/</cite></small>                                            </blockquote>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <div class="thumbnail adjust1">
+                                <div mobileHide="772" class="col-md-2 col-sm-2 col-xs-12">
+                                    <span class="fa-stack fa-4x">
+                                      <i class="fa fa-square fa-stack-2x text-primary"></i>
+                                      <i class="fa fa-rss fa-stack-1x fa-inverse" style="color:#FFC107"></i>
+                                    </span>
+                                </div>
+                                <div class="col-md-10 col-sm-10 col-xs-12">
+                                    <div class="caption">
+                                        <p class="text-info lead adjust2">chsakell's Blog</p>
+                                        <p><span class="glyphicon glyphicon-thumbs-up"></span> Anything around ASP.NET MVC,Web
+                                            API, WCF, Entity Framework & Angular.</p>
+                                        <blockquote class="adjust2">
+                                            <p>Chris Sakellarios</p> <small><cite title="Source Title"><i class="glyphicon glyphicon-globe"></i> https://chsakell.com</cite></small>                                            </blockquote>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Controls -->
+            <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"></span> </a>
+            <a class="right carousel-control" href="#carousel-example-generic" data-slide="next"> <span class="glyphicon glyphicon-chevron-right"></span> </a>
+        </div>
+    </div>
+ 
+    <hr>
+    <!-- Title -->
+    <div class="row">
+        <div class="col-lg-12">
+            <h3>Latest Features</h3>
+        </div>
+    </div>
+    <!-- /.row -->
+    <!-- Page Features -->
+    <div class="row text-center">
+        <div class="col-md-3 col-sm-6 hero-feature">
+            <div class="thumbnail">
+                <span class="fa-stack fa-5x">
+                    <i class="fa fa-square fa-stack-2x text-primary"></i>
+                    <i class="fa fa-html5 fa-stack-1x fa-inverse"></i>
+                </span>
+                <div class="caption">
+                    <h3>ASP.NET Core</h3>
+                    <p>ASP.NET Core is a significant redesign of ASP.NET.</p>
+                    <p>
+                        <a href="https://docs.asp.net/en/latest/" target="_blank" class="btn btn-primary">More..</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6 hero-feature">
+            <div class="thumbnail">
+                <span class="fa-stack fa-5x">
+                    <i class="fa fa-square fa-stack-2x text-primary"></i>
+                    <i class="fa fa-database fa-stack-1x fa-inverse"></i>
+                </span>
+                <div class="caption">
+                    <h3>EF Core</h3>
+                    <p>A cross-platform version of Entity Framework.</p>
+                    <p>
+                        <a href="https://docs.efproject.net/en/latest/" target="_blank" class="btn btn-primary">More..</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6 hero-feature">
+            <div class="thumbnail">
+                <span class="fa-stack fa-5x">
+                    <i class="fa fa-square fa-stack-2x text-primary"></i>
+                    <i class="fa fa-code fa-stack-1x fa-inverse"></i>
+                </span>
+                <div class="caption">
+                    <h3>Angular</h3>
+                    <p>Angular is a platform for building mobile and desktop web apps.</p>
+                    <p>
+                        <a href="https://angular.io/" target="_blank" class="btn btn-primary">More..</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6 hero-feature">
+            <div class="thumbnail">
+                <span class="fa-stack fa-5x">
+                    <i class="fa fa-square fa-stack-2x text-primary"></i>
+                    <i class="fa fa-terminal fa-stack-1x fa-inverse"></i>
+                </span>
+                <div class="caption">
+                    <h3>TypeScript</h3>
+                    <p>A free and open source programming language.</p>
+                    <p>
+                        <a href="https://www.typescriptlang.org/" target="_blank" class="btn btn-primary">More..</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /.row -->
+    <hr>
+    <!-- Footer -->
+    <footer>
+        <div class="row">
+            <div class="col-lg-12">
+                <p>Copyright &copy; <a href="https://chsakell.com" target="_blank">chsakell's Blog</a></p>
+            </div>
+        </div>
+    </footer>
+</div>
