--- a/src/webapi-angular/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/src/webapi-angular/ClientApp/app/components/navmenu/navmenu.component.html
@@ -27,6 +27,16 @@
                         <span class='glyphicon glyphicon-th-list'></span> Fetch data
                     </a>
                 </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/schedules']">
+                        <span class='glyphicon glyphicon-th-list'></span> Schedules
+                    </a>
+                </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/users']">
+                        <span class='glyphicon glyphicon-th-list'></span> Users
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
