Correção de bugs e outros ajustes

--- a/src/webapi-angular/Views/Shared/_Layout.cshtml
+++ b/src/webapi-angular/Views/Shared/_Layout.cshtml
@@ -5,7 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>@ViewData["Title"] - WebApplicationBasic</title>
         <base href="/" />
+        <script src="//cdn.jsdelivr.net/alertifyjs/1.9.0/alertify.min.js"></script>
         <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
+        <link rel="stylesheet" href="//cdn.jsdelivr.net/alertifyjs/1.9.0/css/alertify.min.css"/>
+        <!-- Default theme -->
+        <link rel="stylesheet" href="//cdn.jsdelivr.net/alertifyjs/1.9.0/css/themes/default.min.css"/>
+        <!-- Semantic UI theme -->
+        <link rel="stylesheet" href="//cdn.jsdelivr.net/alertifyjs/1.9.0/css/themes/semantic.min.css"/>
+        <!-- Bootstrap theme -->
+        <link rel="stylesheet" href="//cdn.jsdelivr.net/alertifyjs/1.9.0/css/themes/bootstrap.min.css"/>
     </head>
     <body>
         @RenderBody()
