--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
 <main>
   <h1>Hello from Angular App with Webpack</h1>
   <img src="../assets/images/angular.png">
+  <hr>
+  <div class="row">
+    <div class="col-md-1">
+      <button class="btn btn-default" (click)="toogle()">Surpresa!</button>
+    </div>
+  </div>
+  <div class="row">
+    <img [hidden]="!mostrar" src="../assets/images/smile.jpg">
+  </div>
 </main>
