adicionando components e corrigindo bugs

--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,5 +1,6 @@
 <h1>{{title}}</h1>
-    <nav>
-        <a routerLink="/home" routerLinkActive="active">Home</a>
-    </nav>
-    <router-outlet></router-outlet>
+<nav>
+    <a routerLink="/home" routerLinkActive="active">Home</a> |
+    <a routerLink="/info" routerLinkActive="active">Info</a>
+</nav>
+<router-outlet></router-outlet>
