--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <main>
-  <h1>Hello from Angular App with Webpack</h1>
+  <h3>Hello from Angular App with Webpack</h3>
   <!--TODO: corrigir caminho das imagens-->
-  <img src="../assets/images/angular.png">
+  <img src="../../../assets/images/angular.png">
   <hr>
   <div class="row">
     <div class="col-md-1">
@@ -9,6 +9,6 @@
     </div>
   </div>
   <div class="row">
-    <img [hidden]="!mostrar" src="../assets/images/smile.jpg">
+    <img [hidden]="!mostrar" src="../../../assets/images/smile.jpg">
   </div>
 </main>
