--- a/src/app/components/app/app.component.css
+++ b/src/app/components/app/app.component.css
@@ -1,7 +1,4 @@
-main {
-  padding: 1em;
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
-  margin-top: 50px;
-  display: block;
+nav{
+  background-color: #FDA;
+  font-family: Courier New, Courier, monospace;
 }
