--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,14 +1,6 @@
-<main>
-  <h3>Hello from Angular App with Webpack</h3>
-  <!--TODO: corrigir caminho das imagens-->
-  <img src="../../../assets/images/angular.png">
-  <hr>
-  <div class="row">
-    <div class="col-md-1">
-      <button class="btn btn-default" (click)="toogle()">Surpresa!</button>
-    </div>
-  </div>
-  <div class="row">
-    <img [hidden]="!mostrar" src="../../../assets/images/smile.jpg">
-  </div>
-</main>
+<h1>Styles Conference</h1>
+<p>
+  Every year the brightest web designers and front-end developers descend on Chicago 
+  to discuss the latest technologies. Join us this August!
+</p>
+
