--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,6 +1,6 @@
-<h1>{{title}}</h1>
+<!--<h1>{{title}}</h1>
 <nav>
     <a routerLink="/home" routerLinkActive="active">Home</a> |
     <a routerLink="/info" routerLinkActive="active">Info</a>
-</nav>
+</nav>-->
 <router-outlet></router-outlet>
