--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,5 @@
-<h1>Styles Conference</h1>
+<h1>Site em Angular 2</h1>
 <p>
-  Every year the brightest web designers and front-end developers descend on Chicago 
-  to discuss the latest technologies. Join us this August!
+  Efetuando testes de publicação do esqueleto do site.
 </p>
 
